--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 							<input type="checkbox" id="btn-menu">
 							<label for="btn-menu"><img src="image/menu.png" alt="menu"></label>
 							<ul>   <!--mennu normal-->
-								<li><a href="#">LIFESTYLE</a></li>
-								<li><a href="#">FLOWERS</a></li>
-								<li><a href="#">FASHION</a></li>
-								<li><a href="#">NEWS</a></li>
-								<li><a href="#">FEATURES</a></li>
+								<li><a class="mennu" href="#">LIFESTYLE</a></li>
+								<li><a class="mennu" href="#">FLOWERS</a></li>
+								<li><a class="mennu" href="#">FASHION</a></li>
+								<li><a class="mennu" href="#">NEWS</a></li>
+								<li><a class="mennu" href="#">FEATURES</a></li>
 							</ul>
 						</nav>
 					</div>	
@@ -42,7 +42,7 @@
 				<div class="col-xs-12 col-lg-12">
 					<div class="fondo2">
 						<h1 class="text-center pd-5 tx-st">Spring Came</h1>
-						<p class="text-center pd-5 text-white">Life - Amanda Ray - 10th March 2015</p>
+						<p class="text-center pd-5 text-white spring">Life - Amanda Ray - 10th March 2015</p>
 					</div>
 				</div>
 			</div>
@@ -135,8 +135,8 @@
 		<footer class="bg-bl hd-ft hig">              <!--footer-->
 			<p class="text-center"><strong>All Rights reserved &copy<span>nK</span></strong></p>
 		</footer> 
-
 	<script src="js/jquery.js"></script>
+	<script src="js/main.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 
 	</body>
